--- a/datapoints/lib/noeticboxsales/template.html
+++ b/datapoints/lib/noeticboxsales/template.html
@@ -1,6 +1,7 @@
 =<li style="width:100%;">
     <img src="http://www.shoptiques.com/static/QkwNhENd2YYKTVxudSE9Wj5XzTgJACaYfk48sY07cIg.ico" style="width:20px; padding-right:10px;" align="left" />
     <p style="float:right;padding-right:10px;">${pretty_date}</p>
+    <p style="margin-bottom:2px;">${title}</p>
     <ul style="padding-left:30px;" class="actions">
         <li class="action_values" style="margin-top:5px;">
             <table style="width:100%">
@@ -44,6 +45,172 @@
                                data-facet_value="${extensions_userfirstname_s}">
                                 ${extensions_userfirstname_s}</a>
                         </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding-bottom:2px;">
+                        <label>Surname</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_filter"
+                               data-facet_name="extensions_usersurname_s"
+                               data-facet_value="${extensions_usersurname_s}">
+                                ${extensions_usersurname_s}
+                            </a>
+                        </span>
+                    </td>
+                    <td style="padding-bottom:2px;">
+                        <label>Date in Cart</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_filter"
+                               data-facet_name="extensions_dateincart_s"
+                               data-facet_value="${extensions_dateincart_s}">
+                                ${extensions_dateincart_s}</a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding-bottom:2px;">
+                        <label>Status</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_filter"
+                               data-facet_name="extensions_status_s"
+                               data-facet_value="${extensions_status_s}">
+                                ${extensions_status_s}
+                            </a>
+                        </span>
+                    </td>
+                    <td style="padding-bottom:2px;">
+                        <label>Product</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_filter"
+                               data-facet_name="extensions_producturl_s"
+                               data-facet_value="${extensions_producturl_s}">
+                                ${extensions_producturl_s}</a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding-bottom:2px;">
+                        <label>Amount</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_range_filter"
+                               data-facet_name="extensions_productamount_f"
+                               data-facet_value="${extensions_productamount_f}">
+                                $ ${extensions_productamount_f}
+                            </a>
+                        </span>
+                    </td>
+                    <td style="padding-bottom:2px;">
+                        <label>Product Color</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_filter"
+                               data-facet_name="extensions_productcolor_s"
+                               data-facet_value="${extensions_productcolor_s}">
+                                ${extensions_productcolor_s}
+                            </a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding-bottom:2px;">
+                        <label>Product Size</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_filter"
+                               data-facet_name="extensions_productsize_s"
+                               data-facet_value="${extensions_productsize_s}">
+                                ${extensions_productsize_s}
+                            </a>
+                        </span>
+                    </td>
+                    <td style="padding-bottom:2px;">
+                        <label>Boutique</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_filter"
+                               data-facet_name="extensions_boutique_s"
+                               data-facet_value="${extensions_boutique_s}">
+                                ${extensions_boutique_s}
+                            </a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding-bottom:2px;">
+                        <label>Label</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_filter"
+                               data-facet_name="extensions_label_s"
+                               data-facet_value="${extensions_label_s}">
+                                ${extensions_label_s}
+                            </a>
+                        </span>
+                    </td>
+                    <td style="padding-bottom:2px;">
+                        <label>Order ID</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_filter"
+                               data-facet_name="extensions_orderid_s"
+                               data-facet_value="${extensions_orderid_s}">
+                                ${extensions_orderid_s}
+                            </a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding-bottom:2px;">
+                        <label>Order Created Date</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_filter"
+                               data-facet_name="extensions_ordercreateddate_s"
+                               data-facet_value="${extensions_ordercreateddate_s}">
+                                ${extensions_ordercreateddate_s}
+                            </a>
+                        </span>
+                    </td>
+                    <td style="padding-bottom:2px;">
+                        <label>Promo Code</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_filter"
+                               data-facet_name="extensions_promocode_s"
+                               data-facet_value="${extensions_promocode_s}">
+                                ${extensions_promocode_s}
+                            </a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding-bottom:2px;">
+                        <label>Linkshare</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_filter"
+                               data-facet_name="extensions_linkshare_s"
+                               data-facet_value="${extensions_linkshare_s}">
+                                ${extensions_linkshare_s}
+                            </a>
+                        </span>
+                    </td>
+                    <td style="padding-bottom:2px;">
+                        <label>Order Total</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_range_filter"
+                               data-facet_name="extensions_ordertotal_f"
+                               data-facet_value="${extensions_ordertotal_f}">
+                                $ ${extensions_ordertotal_f}
+                            </a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding-bottom:2px;">
+                        <label>Order Items Count</label>
+                        <span style="float:right;padding-right:10px;font-weight:bold;">
+                            <a class="action_inline_range_filter"
+                               data-facet_name="extensions_orderitemscount_f"
+                               data-facet_value="${extensions_orderitemscount_f}">
+                                ${extensions_orderitemscount_f}
+                            </a>
+                        </span>
+                    </td>
+                    <td style="padding-bottom:2px;">
                     </td>
                 </tr>
             </table>
