--- a/datapoints/lib/noeticboxsales/template.html
+++ b/datapoints/lib/noeticboxsales/template.html
@@ -1,4 +1,4 @@
-=<li style="width:100%;">
+<li style="width:100%;">
     <img src="http://www.shoptiques.com/static/QkwNhENd2YYKTVxudSE9Wj5XzTgJACaYfk48sY07cIg.ico" style="width:20px; padding-right:10px;" align="left" />
     <p style="float:right;padding-right:10px;">${pretty_date}</p>
     <p style="margin-bottom:2px;">${title}</p>
